--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   "devDependencies": {
     "serverless-dynamodb-local": "^0.2.30",
     "serverless-offline": "^3.25.6"
+  },
+  "dependencies": {
+    "serverless": "^1.32.0"
   }
 }
